--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,8 @@ plugins:
   - jekyll-paginate
   - jekyll-seo-tag
 version: 0.1
+kramdown:
+  parse_block_html: true
 description: Kinna is a new, award winning creative, working between film and music.
 github:
   repo: https://github.com/kinna-music/kinna-music.github.io
