Add video optimisation

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ url: https://www.kinna.co.uk
 
 baseurl: /
 relative_url: true
+creator: Kinna
 author:
   name: Roland Whitehead
   url: https://cart-shed.com
